--- a/ui/components/app/snaps/snap-ui-renderer/index.scss
+++ b/ui/components/app/snaps/snap-ui-renderer/index.scss
@@ -48,10 +48,6 @@
 
   &__panel {
     gap: 8px;
-
-    .mm-icon--size-inherit {
-      top: 0;
-    }
   }
 
   &__text {
